# cafe_inn-be-fastapi

./: .env.example  .gitignore  pyproject.toml  requirements.txt
app/: main.py  mockup.py
app/config/: database.py  settings.py
app/core/: deps.py  security.py
app/models/: __init__.py  base.py  order.py  product.py  reservation.py  table.py  user.py
app/routers/: auth.py  orders.py  products.py  reservations.py  tables.py  users.py
app/schemas/: auth.py  order.py  product.py  reservation.py  table.py  user.py
app/services/: auth_service.py  order_service.py  product_service.py  reservation_service.py  table_service.py  user_service.py
docs/: dbdiagram.dbml
tests/: test_auth.py  test_orders.py  test_products.py  test_reservations.py  test_tables.py  test_users.py
